--- a/src/AppBundle/Resources/views/Charts/showAll.html.twig
+++ b/src/AppBundle/Resources/views/Charts/showAll.html.twig
@@ -8,7 +8,8 @@
         <div class="row">
               <div class="col-md-12">
                 <h1>Charts for: {{ letter }}</h1>
-                <hr>
+                <h4>Number of charts: {{ charts|length }}</h4>
+                
                 <table class="table table-condensed">
                     {% for chart in charts %}
                         <tr>
